--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <header>Vamos Git</header>
     <div>hola Index</div>
     <footer>soy David Wilson Cruz</footer>
 </body>
-</html>
