Y fetch te espero

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Modificando desde la nube, en otras palabras desde GitHub</h1>
     <header>Vamos Git</header>
     <div>hola Index</div>
+    <div> jajajja veamos si sos bueno fetch </div>
     <footer>soy David Wilson Cruz</footer>
 </body>
