--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <header>Vamos Git</header>
     <div>hola Index</div>
     <div> jajajja veamos si sos bueno fetch </div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate dolorem, asperiores iste reprehenderit ratione, natus inventore quos quam aspernatur amet aliquam itaque repellendus id odit nemo necessitatibus tenetur, neque consequuntur.</p>
     <footer>soy David Wilson Cruz</footer>
 </body>
