Modifique classe del footer

--- a/index.html
+++ b/index.html
@@ -12,5 +12,5 @@
     <div>hola Index</div>
     <div> jajajja veamos si sos bueno fetch </div>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate dolorem, asperiores iste reprehenderit ratione, natus inventore quos quam aspernatur amet aliquam itaque repellendus id odit nemo necessitatibus tenetur, neque consequuntur.</p>
-    <footer>soy David Wilson Cruz</footer>
+    <footer class="vengoDeRamaConflicto">soy David Wilson Cruz</footer>
 </body>
