--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <div>agrengando si origin directamente git push</div>
     <h1>Modificando desde la nube, en otras palabras desde GitHub</h1>
     <header>Vamos Git</header>
     <div>hola Index</div>
